[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/register/Register.gd" type="Script" id=1]
[ext_resource path="res://backgrounds/splashScreen.png" type="Texture" id=2]
[ext_resource path="res://interface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/fonts/montserrat_eb_64.tres" type="DynamicFont" id=4]

[node name="Register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 2.0
margin_right = 1920.0
margin_bottom = 1082.0
texture = ExtResource( 2 )
stretch_mode = 5

[node name="Container" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0
custom_constants/separation = 50

[node name="Title" parent="Container" instance=ExtResource( 3 )]
text = "REGISTER SCREEN"

[node name="VBoxContainer2" type="VBoxContainer" parent="Container"]
margin_top = 207.0
margin_right = 1870.0
margin_bottom = 704.0
custom_constants/separation = 15

[node name="Username" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_right = 1435.0
margin_bottom = 89.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Username"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Username:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Username"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 4 )
caret_blink = true

[node name="Password" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_top = 104.0
margin_right = 1435.0
margin_bottom = 193.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Password"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Password:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Password"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 4 )
secret = true
caret_blink = true

[node name="Confirm" type="HBoxContainer" parent="Container/VBoxContainer2"]
margin_left = 435.0
margin_top = 208.0
margin_right = 1435.0
margin_bottom = 297.0
rect_min_size = Vector2( 1000, 0 )
size_flags_horizontal = 4
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="Container/VBoxContainer2/Confirm"]
margin_top = 5.0
margin_right = 450.0
margin_bottom = 84.0
rect_min_size = Vector2( 450, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Confirm:"
align = 2

[node name="LineEdit" type="LineEdit" parent="Container/VBoxContainer2/Confirm"]
margin_left = 475.0
margin_right = 1000.0
margin_bottom = 89.0
size_flags_horizontal = 11
custom_fonts/font = ExtResource( 4 )
secret = true
caret_blink = true

[node name="RegisterButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 762.0
margin_top = 312.0
margin_right = 1107.0
margin_bottom = 397.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "REGISTER"

[node name="BackButton" type="Button" parent="Container/VBoxContainer2"]
margin_left = 832.0
margin_top = 412.0
margin_right = 1038.0
margin_bottom = 497.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 4 )
text = "BACK"

[node name="Notification" type="Label" parent="Container"]
margin_top = 754.0
margin_right = 1870.0
margin_bottom = 833.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
align = 1
autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Container/VBoxContainer2/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="Container/VBoxContainer2/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
